syntax = "proto3";
package rpcpb;

import "github.com/coreos/coreos-baremetal/bootcfg/server/serverpb/messages.proto";

service Groups {
  // Create a Group.
  rpc GroupPut(messagepb.GroupPutRequest) returns (messagepb.GroupPutResponse) {};
  // Get a machine Group by id.
  rpc GroupGet(messagepb.GroupGetRequest) returns (messagepb.GroupGetResponse) {};
  // List all machine Groups.
  rpc GroupList(messagepb.GroupListRequest) returns (messagepb.GroupListResponse) {};
}

service Profiles {
  // Create a Profile.
  rpc ProfilePut(messagepb.ProfilePutRequest) returns (messagepb.ProfilePutResponse) {};
  // Get a Profile by id.
  rpc ProfileGet(messagepb.ProfileGetRequest) returns (messagepb.ProfileGetResponse) {};
  // List all Profiles.
  rpc ProfileList(messagepb.ProfileListRequest) returns (messagepb.ProfileListResponse) {};
}

service Select {
  // SelectGroup returns the Group matching the given labels.
  rpc SelectGroup(messagepb.SelectGroupRequest) returns (messagepb.SelectGroupResponse) {};
  // SelectProfile returns the Profile matching the given labels.
  rpc SelectProfile(messagepb.SelectProfileRequest) returns (messagepb.SelectProfileResponse) {};
}
